--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         During high school, I wrote articles and produced tech YouTube videos about
         gadgets at GizmoLead.
       </p>
-      <p>Everyday, I meditate, work out, go running with my brother and dog, love an awe-inspiring
-        and sweet human, stargaze, read a book or some blogs, and cook okay-ish dinner while listening to music.
-        On weekends, I enjoy spending time with the aforementioned human, meeting new people
-        and learning from their experiences, exploring real-world problems, reading about startups,
-        learning new things, helping people believe in themselves to make the best of their finite time on this planet,
+      <p>I meditate, work out, go running with my brother and dog, love an awe-inspiring
+        and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music.
+        I enjoy hanging out with loved ones, meeting new people
+        and learning from their experiences, learning new things, exploring real-world problems,
+        reading about startups, helping juniors who are still in college believe in themselves to make the best of their finite time,
         exploring our planet, watching movies, or experiencing something different.
       </p>
       <p>
