--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music.
         I enjoy hanging out with loved ones, meeting new people
         and learning from their experiences, learning new things, exploring real-world problems,
-        reading about startups, helping juniors who are still in college believe in themselves to make the best of their finite time,
-        exploring our planet, watching movies, or experiencing something different.
+        helping juniors who are still in college believe in themselves to make the best of their finite time,
+        watching movies, exploring our planet, reading about startups, and experiencing something different.
       </p>
       <p>
         Feel free to
