--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         background: #020C1E;
         color: #CED1D5;
         font-family: "Roboto Mono", monospace;
-        line-height: 22px;
+        line-height: 24px;
       }
       a {
         color: #CED1D5;
@@ -50,10 +50,9 @@
         text-decoration: underline dotted;
       }
       #container {
-        font-size: 0.9em;
+        font-size: 1em;
         margin: 0;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
+        padding: 1em;
       }
       #contact-desktop {
 	display: none;
@@ -65,14 +64,9 @@
 	#contact-mobile {
 		display: none;
 	}
-	body {
-		line-height: 24px;
-	}
       }
       @media (min-width: 1054px) {
 	 #container {
-		 font-size: 1em;
-		 margin: 0;
 		 transform: translate(-50%, 0%);
 		 position: absolute;
 		 margin-top: 2em;
