--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       </p>
       <p>I meditate, work out, go running with my brother and dog, love an awe-inspiring
         and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music or podcasts.
-        I enjoy hanging out with loved ones, meeting new people
-        and learning from them, exploring real-world problems, learning new things,
+        I enjoy software engineering, exploring real-world problems and building products, hanging out with loved ones,
+	meeting new people and learning from them, learning new things,
         helping juniors who are still in college believe in themselves to make the best of their finite time,
         watching movies, exploring our planet, reading about startups, and experiencing something different.
       </p>
