--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>.
         Previously, I worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
-        a software engineer intern, where I primarily built the HackerRank Interviews for Slack
-        integration, along with a bunch of features for HackerRank for Work. I was a
+        a software engineer intern, where I built the HackerRank Interviews for Slack
+        integration primarily, and a bunch of features for HackerRank for Work. I was a
         <a
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
           target="_blank"
@@ -125,10 +125,10 @@
       </p>
       <p>I meditate, work out, go running with my brother and dog, love an awe-inspiring
         and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music or podcasts.
-        I enjoy software engineering, exploring real-world problems, building products, hanging out with loved ones,
-	meeting new people and learning from them, learning new things,
+        I enjoy software engineering, exploring real-world problems, hanging out with loved ones,
+	meeting new people and learning from them, learning and building things,
         helping juniors who are still in college believe in themselves to make the best of their finite time,
-        watching movies, exploring our planet, reading about startups, and experiencing something different.
+        watching movies, exploring our planet, and experiencing something different.
       </p>
       <p>
       	Alright, since you've read this far,
