--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         Previously, I worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
         a software engineer intern, where I built the HackerRank Interviews for Slack
-        integration primarily, and a bunch of features for HackerRank for Work. I was a
+        integration and a bunch of features for HackerRank for Work. I was a
         <a
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
           target="_blank"
