--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="Hi! I'm Anand. Welcome to my space on the internet! These days I'm learning computer science and building Kukkee."
+      content="Hello human! I'm Anand. Welcome to my space on the internet! These days I'm learning computer science and building Kukkee."
     />
     <style>
 		/* roboto-mono-regular - latin */
@@ -93,10 +93,10 @@
   <body>
     <div id="container">
       <h1>
-      	Hi! I'm Anand.
+      	Hello human, 
       </h1>
       <p>
-        These days I'm learning computer science and building
+        I'm Anand. These days I'm learning computer science and building
         <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>.
         Previously, I worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
@@ -120,21 +120,20 @@
         projects. I helped build my parents'
         <a href="https://www.telecomlead.com/" target="_blank">news sites</a>
         in WordPress and did freelance WordPress development for 5+ clients.
-        During high school, I wrote articles and produced tech YouTube videos about
-        gadgets at GizmoLead.
+        During high school, I wrote articles and produced tech YouTube videos at GizmoLead.
       </p>
       <p>I meditate, work out, go running with my brother and dog, love an awe-inspiring
         and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music or podcasts.
-        I enjoy software engineering, exploring real-world problems, hanging out with loved ones,
-	meeting new people and learning from them, learning and building things,
-        helping juniors who are still in college believe in themselves to make the best of their finite time,
-        watching movies, exploring our planet, and experiencing something different.
+        I enjoy asking questions, learning and building things, software engineering, exploring real-world problems,
+	hanging out with loved ones, meeting new people and learning from them,
+        building communities, watching movies, exploring our planet, and experiencing something different.
+	I used to play football and video games (Halo and Minecraft were my favorite).
       </p>
       <p>
       	Alright, since you've read this far,
-        <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank"
+        <a href="https://www.youtube.com/watch?v=A0FZIwabctw" target="_blank"
           >here</a
-        >'s a video of a rocket landing. Because why not?
+        >'s a video of an incredible team of humans shooting a car into space and making rockets land. Because why not?
       </p>
       <div id="contact-desktop">
 		   <p>
