--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
       </p>
       <p>I meditate, work out, go running with my brother and dog, love an awe-inspiring
         and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music or podcasts.
-        I enjoy asking questions, learning and building things, software engineering, exploring real-world problems,
+        I enjoy asking questions, learning and building things, software engineering, understanding my brain, exploring real-world problems,
 	hanging out with loved ones, meeting new people and learning from them,
         building communities, watching movies, exploring our planet, and experiencing something different.
-	I used to play football and video games (Halo and Minecraft were my favorite).
+	I used to play football and video games (my favorites were Halo and Minecraft).
       </p>
       <p>
       	Alright, since you've read this far,
