--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         During high school, I wrote articles and produced tech YouTube videos at GizmoLead.
       </p>
       <p>I meditate, work out, go running with my brother and dog, love an awe-inspiring
-        and sweet human, stargaze, read books and blogs, and cook okay-ish dinner while listening to music or podcasts.
+        and sweet human, stargaze, read books and blogs, and cook okay-ish dinner and wash dishes while listening to music or podcasts.
         I enjoy asking questions, learning and building things, software engineering, understanding my brain, exploring real-world problems,
 	hanging out with loved ones, meeting new people and learning from them,
         building communities, watching movies, exploring our planet, and experiencing something different.
