--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         font-family: "Space Grotesk";
         font-style: normal;
         font-weight: 500;
+        font-display: block;
         src: local(""),
           url("./static/space-grotesk-v5-latin-500.woff2") format("woff2"),
           url("./static/space-grotesk-v5-latin-500.woff") format("woff");
