--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </head>
   <body>
     <div id="container">
-      Hi — I'm Anand.
+      Hello! I'm Anand.
       <p>
         Connect with me on
         <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a
@@ -66,14 +66,6 @@
         <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank"
           >LinkedIn</a
         >.
-      </p>
-      <p>
-        Thinking about working together?
-        <a
-          href="https://anandbaburajan.github.io/static/anand_baburajan.pdf"
-          target="_blank"
-          >Here</a
-        >'s my résumé.
       </p>
       <p>
         <a href="mailto:anandbaburajan@gmail.com" target="_blank"
