--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
       body {
         background: #010100;
-        color: #FFF8E7;
+        color: #ced1d5;
         font-family: "Space Grotesk";
       }
       a {
