--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         font-family: "Space Grotesk";
       }
       a {
-        color: #FFF8E7;
+        color: #ced1d5;
         text-decoration: underline;
         text-underline-offset: 0.1em;
       }
