--- a/index.html
+++ b/index.html
@@ -12,37 +12,44 @@
     />
     <style>
       @font-face {
-        font-family: "Space Grotesk";
+        font-family: "DM Sans";
         font-style: normal;
-        font-weight: 500;
+        font-weight: 400;
         font-display: block;
-        src: local(""),
-          url("./static/space-grotesk-v5-latin-500.woff2") format("woff2"),
-          url("./static/space-grotesk-v5-latin-500.woff") format("woff");
+        src: local(""), url("./static/dm-sans.woff") format("woff");
       }
       body {
         background: #010100;
         color: #ced1d5;
-        font-family: "Space Grotesk";
+        font-family: "DM Sans";
+        margin: 0;
+        font-size: 1rem;
       }
       a {
         color: #ced1d5;
         text-decoration: none;
-        margin-right: 1rem;
+        transition: 0.2s;
       }
       a:hover {
-        color: #e9e9e9;
+        color: #ffffff;
+      }
+      .text-link {
+        text-decoration: underline;
+      }
+      .text-p {
+        margin-bottom: 1.3rem;
       }
       #container {
-        font-size: 1.5em;
-        padding: 1em;
+        padding: 2rem;
+        width: 100%;
+        margin: auto;
+        border-left: 1px solid #343434;
+        border-right: 1px solid #343434;
       }
       @media (min-width: 600px) {
         #container {
-          transform: translate(-50%, -50%);
-          position: absolute;
-          top: 50%;
-          left: 50%;
+          width: 22%;
+          padding: 1rem;
         }
       }
     </style>
@@ -53,45 +60,142 @@
   </head>
   <body>
     <div id="container">
-      <p>
-        Hello!
+      <p class="text-p">Hi, I'm Anand.</p>
+      <p class="text-p">
+        I'm the founder of <a class="text-link" href="https://cq2.co/">CQ2</a> —
+        a tool for thoughtful and coherent discussions.
       </p>
-      <p>
-        I'm Anand.
+      <p class="text-p">
+        Before starting CQ2, I worked at Frappe, where I primarily
+        <a
+          class="text-link"
+          href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
+          >maintained</a
+        >
+        the Assets Management module in ERPNext.
       </p>
-      <p>
-        <a href="https://x.com/anandbaburajan" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
-            <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"/>
-          </svg>
-        </a>
-        <a href="https://github.com/anandbaburajan" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-          </svg>
-        </a>
-        <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-          </svg>
-        </a>
-        <a href="mailto:anandbaburajan@gmail.com" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
-          </svg>
-        </a>
-        <a href="https://t.me/anandbaburajan" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
-          </svg>
-        </a>
+      <p class="text-p">
+        I'm the creator of
+        <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
+        poll tool to help people find a time which works for everyone. It has
+        been used to create over 2.5k+ polls, has 280+ stars on GitHub and won a
+        Rs 10k prize at FOSS Hack 3.0.
       </p>
-      <br>
+      <p class="text-p">
+        I've
+        <a
+          class="text-link"
+          href="https://www.hackerrank.com/interns/2021/summer/"
+          >interned</a
+        >
+        at HackerRank, where I built the HackerRank Interviews for Slack
+        integration and a bunch of features for HackerRank for Work.
+      </p>
+      <p class="text-p">
+        I've
+        <a
+          class="text-link"
+          href="https://github.com/LiberTEM/LiberTEM/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
+          >contributed</a
+        >
+        to LiberTEM through the
+        <a
+          class="text-link"
+          href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
+          >Google Summer of Code '20 program</a
+        >, where I enhanced the data pipeline to allow reshaping pixelated STEM
+        datasets and built a feature for handling datasets with sync/acquisition
+        issues.
+      </p>
+      <p class="text-p">
+        That was my first, proper introduction to open source, which led me to
+        start
+        <a class="text-link" href="https://openhack.gitbook.io/openhack-20/"
+          >FOSS OpenHack '20</a
+        >
+        — a program which helped 25+ students with building 10+ open source
+        projects and contributing to 5+ major open source projects (Mission
+        Support System, ownCloud-CERN, CVE Binary Tool, etc).
+      </p>
+      <p class="text-p">
+        Before my GSoC, I tried building tools with PHP/Python/JS/C++ to solve
+        <a
+          class="text-link"
+          href="https://github.com/anandbaburajan/Road-Status-Updates"
+          >real-world problems</a
+        >
+        and failed, but took part in small hackathons and won some.
+      </p>
+      <p class="text-p">
+        Before that, in my first year of college, I did freelance WordPress
+        development for 5+ clients and made Rs 45k+.
+      </p>
+      <p class="text-p">
+        I got started with WordPress when I helped build my parents' WordPress
+        news sites such as TelecomLead.
+      </p>
+      <p class="text-p">
+        I got started with programming in my Class 6th by building simple web
+        pages with HTML and CSS but quickly moved on to building simple
+        <a class="text-link" href="https://flashforstarters.wordpress.com/"
+          >Flash</a
+        >
+        games.
+      </p>
+      <p class="text-p">
+        Even that interest was short-lived since I got more interested in
+        gadgets and hence, during high school, I reviewed tech products, wrote
+        tech articles, attended tech events, produced tech YouTube
+        <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
+          >videos</a
+        >, grew the channel to 2.5k+ subscribers and made Rs 35k+ in ad revenue.
+      </p>
+      <br />
+      <p>
+        <a class="text-link" href="https://x.com/anandbaburajan" target="_blank"
+          >X </a
+        ><br />
+        <a
+          class="text-link"
+          href="mailto:anandbaburajan@gmail.com"
+          target="_blank"
+        >
+          Email </a
+        ><br />
+        <a
+          class="text-link"
+          href="https://github.com/anandbaburajan"
+          target="_blank"
+        >
+          GitHub </a
+        ><br />
+        <a
+          class="text-link"
+          href="https://www.linkedin.com/in/anandbaburajan/"
+          target="_blank"
+          >LinkedIn </a
+        ><br />
+        <a class="text-link" href="https://t.me/anandbaburajan" target="_blank">
+          Telegram </a
+        ><br />
+      </p>
+      <br />
       <p>
         <a href="https://www.youtube.com/watch?v=A0FZIwabctw" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-rocket-takeoff-fill" viewBox="0 0 16 16">
-            <path d="M12.17 9.53c2.307-2.592 3.278-4.684 3.641-6.218.21-.887.214-1.58.16-2.065a3.578 3.578 0 0 0-.108-.563 2.22 2.22 0 0 0-.078-.23V.453c-.073-.164-.168-.234-.352-.295a2.35 2.35 0 0 0-.16-.045 3.797 3.797 0 0 0-.57-.093c-.49-.044-1.19-.03-2.08.188-1.536.374-3.618 1.343-6.161 3.604l-2.4.238h-.006a2.552 2.552 0 0 0-1.524.734L.15 7.17a.512.512 0 0 0 .433.868l1.896-.271c.28-.04.592.013.955.132.232.076.437.16.655.248l.203.083c.196.816.66 1.58 1.275 2.195.613.614 1.376 1.08 2.191 1.277l.082.202c.089.218.173.424.249.657.118.363.172.676.132.956l-.271 1.9a.512.512 0 0 0 .867.433l2.382-2.386c.41-.41.668-.949.732-1.526l.24-2.408Zm.11-3.699c-.797.8-1.93.961-2.528.362-.598-.6-.436-1.733.361-2.532.798-.799 1.93-.96 2.528-.361.599.599.437 1.732-.36 2.531Z"/>
-            <path d="M5.205 10.787a7.632 7.632 0 0 0 1.804 1.352c-1.118 1.007-4.929 2.028-5.054 1.903-.126-.127.737-4.189 1.839-5.18.346.69.837 1.35 1.411 1.925Z"/>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-rocket-takeoff-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M12.17 9.53c2.307-2.592 3.278-4.684 3.641-6.218.21-.887.214-1.58.16-2.065a3.578 3.578 0 0 0-.108-.563 2.22 2.22 0 0 0-.078-.23V.453c-.073-.164-.168-.234-.352-.295a2.35 2.35 0 0 0-.16-.045 3.797 3.797 0 0 0-.57-.093c-.49-.044-1.19-.03-2.08.188-1.536.374-3.618 1.343-6.161 3.604l-2.4.238h-.006a2.552 2.552 0 0 0-1.524.734L.15 7.17a.512.512 0 0 0 .433.868l1.896-.271c.28-.04.592.013.955.132.232.076.437.16.655.248l.203.083c.196.816.66 1.58 1.275 2.195.613.614 1.376 1.08 2.191 1.277l.082.202c.089.218.173.424.249.657.118.363.172.676.132.956l-.271 1.9a.512.512 0 0 0 .867.433l2.382-2.386c.41-.41.668-.949.732-1.526l.24-2.408Zm.11-3.699c-.797.8-1.93.961-2.528.362-.598-.6-.436-1.733.361-2.532.798-.799 1.93-.96 2.528-.361.599.599.437 1.732-.36 2.531Z"
+            />
+            <path
+              d="M5.205 10.787a7.632 7.632 0 0 0 1.804 1.352c-1.118 1.007-4.929 2.028-5.054 1.903-.126-.127.737-4.189 1.839-5.18.346.69.837 1.35 1.411 1.925Z"
+            />
           </svg>
         </a>
       </p>
