--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
       }
       #container {
         padding: 2rem;
-        width: 100%;
+        width: auto;
         margin: auto;
-        border-left: 1px solid #343434;
-        border-right: 1px solid #343434;
+        border-left: 0;
+        border-right: 0;
       }
       @media (min-width: 600px) {
         #container {
           width: 22%;
           padding: 1rem;
+          border-left: 1px solid #343434;
+          border-right: 1px solid #343434;
         }
       }
     </style>
