--- a/index.html
+++ b/index.html
@@ -37,7 +37,21 @@
         text-decoration: underline;
       }
       .text-p {
+        margin-top: 0rem;
         margin-bottom: 1.3rem;
+      }
+      ::-webkit-scrollbar {
+        -webkit-appearance: none;
+        height: 0.6rem;
+        width: 0.6rem;
+      }
+
+      ::-webkit-scrollbar-track {
+        background-color: rgb(59, 59, 59);
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: rgb(104, 104, 104);
       }
       #container {
         padding: 2rem;
@@ -62,7 +76,9 @@
   </head>
   <body>
     <div id="container">
+      <br />
       <p class="text-p">Hi, I'm Anand.</p>
+      <br />
       <p class="text-p">
         I'm the founder of <a class="text-link" href="https://cq2.co/">CQ2</a> —
         a tool for thoughtful and coherent discussions.
@@ -91,7 +107,7 @@
           >interned</a
         >
         at HackerRank, where I built the HackerRank Interviews for Slack
-        integration and a bunch of features for HackerRank for Work.
+        integration and a bunch of features.
       </p>
       <p class="text-p">
         I've
