--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
       }
       @media (min-width: 600px) {
         #container {
-          width: 22%;
+          min-width: 28rem;
+          max-width: 22%;
           padding: 1rem;
           border-left: 1px solid #343434;
           border-right: 1px solid #343434;
