--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         margin-top: 0rem;
         margin-bottom: 1.3rem;
       }
+      .text-first {
+        margin-top: 0rem;
+        margin-bottom: 1.5rem;
+        color: #ffffff;
+        font-size: 1.6rem;
+      }
       ::-webkit-scrollbar {
         -webkit-appearance: none;
         height: 0.6rem;
@@ -78,11 +84,10 @@
   <body>
     <div id="container">
       <br />
-      <p class="text-p">Hi, I'm Anand.</p>
-      <br />
+      <p class="text-first">Hi, I'm Anand.</p>
       <p class="text-p">
-        I'm the founder of <a class="text-link" href="https://cq2.co/">CQ2</a> —
-        a tool for thoughtful and coherent discussions.
+        I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — the
+        work communication tool for written-first teams.
       </p>
       <p class="text-p">
         Before starting CQ2, I worked at Frappe, where I primarily
