--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p class="text-first">Hi, I'm Anand.</p>
       <p class="text-p">
         I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — the
-        work communication tool for written-first teams.
+        free and open source tool for complex discussions.
       </p>
       <p class="text-p">
         Before starting CQ2, I worked at Frappe, where I primarily
@@ -111,7 +111,7 @@
           >interned</a
         >
         at HackerRank, where I built the HackerRank Interviews for Slack
-        integration and a bunch of features.
+        integration and a bunch of other features.
       </p>
       <p class="text-p">
         I've
