--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       }
       body {
         background: #010100;
-        color: #a3a3a3;
+        color: #c1c1c1;
         font-family: "DM Sans";
         margin: 0;
         font-size: 1rem;
       }
       a {
-        color: #a3a3a3;
+        color: #c1c1c1;
         text-decoration: none;
         transition: 0.2s;
       }
@@ -88,13 +88,13 @@
         free and open source tool for complex discussions.
       </p>
       <p class="text-p">
-        Before starting CQ2, I worked at Frappe, where I primarily
+        Before CQ2, I worked at Frappe, where I primarily
         <a
           class="text-link"
           href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
           >maintained</a
         >
-        the Assets Management module in ERPNext.
+        the Assets Management module in ERPNext and did a bunch of other things.
       </p>
       <p class="text-p">
         I'm the creator of
@@ -111,7 +111,7 @@
           >interned</a
         >
         at HackerRank, where I built the HackerRank Interviews for Slack
-        integration and a bunch of other features.
+        integration and a bunch of features for HackerRank for Work.
       </p>
       <p class="text-p">
         I've
@@ -127,11 +127,8 @@
           >Google Summer of Code '20 program</a
         >, where I enhanced the data pipeline to allow reshaping pixelated STEM
         datasets and built a feature for handling datasets with sync/acquisition
-        issues.
-      </p>
-      <p class="text-p">
-        That was my first, proper introduction to open source, which led me to
-        start
+        issues. That was my first, proper introduction to open source, which led
+        me to start
         <a class="text-link" href="https://openhack.gitbook.io/openhack-20/"
           >FOSS OpenHack '20</a
         >
@@ -140,21 +137,15 @@
         Support System, ownCloud-CERN, CVE Binary Tool, etc).
       </p>
       <p class="text-p">
-        Before my GSoC, I tried building tools with PHP/Python/JS/C++ to solve
+        Before my GSoC, I tried building things to solve real-world problems and
         <a
           class="text-link"
           href="https://github.com/anandbaburajan/Road-Status-Updates"
-          >real-world problems</a
-        >
-        and failed, but took part in small hackathons and won some.
-      </p>
-      <p class="text-p">
-        Before that, in my first year of college, I did freelance WordPress
-        development for 5+ clients and made Rs 45k+.
-      </p>
-      <p class="text-p">
-        I got started with WordPress when I helped build my parents' WordPress
-        news sites such as TelecomLead.
+          >failed</a
+        >, but took part in small hackathons and won some. Before that, in my
+        first year of college, I did freelance WordPress development for 5+
+        clients and made Rs 45k+. I got started with WordPress when I helped
+        build my parents' WordPress news sites such as TelecomLead.
       </p>
       <p class="text-p">
         I got started with programming in my Class 6th by building simple web
@@ -162,10 +153,7 @@
         <a class="text-link" href="https://flashforstarters.wordpress.com/"
           >Flash</a
         >
-        games.
-      </p>
-      <p class="text-p">
-        Even that interest was short-lived since I got more interested in
+        games. Even that interest was short-lived since I got more interested in
         gadgets and hence, during high school, I reviewed tech products, wrote
         tech articles, attended tech events, produced tech YouTube
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
