--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       }
       body {
         background: #010100;
-        color: #c1c1c1;
+        color: #a2a2a2;
         font-family: "DM Sans";
         margin: 0;
         font-size: 1rem;
       }
       a {
-        color: #c1c1c1;
+        color: #a2a2a2;
         text-decoration: none;
         transition: 0.2s;
       }
