--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         color: #ffffff;
         font-size: 1.6rem;
       }
+      @media (min-width: 600px) {
+        .text-first {
+          margin-top: 3rem;
+        }
+      }
       ::-webkit-scrollbar {
         -webkit-appearance: none;
         height: 0.6rem;
@@ -73,6 +78,14 @@
           padding: 1rem;
         }
       }
+      #rocket {
+        margin-bottom: 0rem;
+      }
+      @media (min-width: 600px) {
+        #rocket {
+          margin-bottom: 3rem;
+        }
+      }
     </style>
     <meta
       name="google-site-verification"
@@ -81,8 +94,9 @@
   </head>
   <body>
     <div id="container">
+      <p class="text-first">Anand Baburajan</p>
       <br />
-      <p class="text-first">Hi, I'm Anand.</p>
+      <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
         I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — the
         free and open source tool for complex discussions.
@@ -97,14 +111,20 @@
         the Assets Management module in ERPNext and did a bunch of other things.
       </p>
       <p class="text-p">
-        I'm the creator of
+        I created
         <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
         poll tool to help people find a time which works for everyone. It has
         been used to create over 2.5k+ polls, has 280+ stars on GitHub and won a
-        Rs 10k prize at FOSS Hack 3.0.
+        Rs 10k prize at
+        <a
+          class="text-link"
+          href="https://forum.fossunited.org/t/foss-hack-3-0-results/1882#:~:text=Kukkee,meeting%20poll%20tool."
+          >FOSS Hack 3.0</a
+        >
+        by FOSS United.
       </p>
       <p class="text-p">
-        I've
+        I
         <a
           class="text-link"
           href="https://www.hackerrank.com/interns/2021/summer/"
@@ -114,7 +134,7 @@
         integration and a bunch of features for HackerRank for Work.
       </p>
       <p class="text-p">
-        I've
+        I
         <a
           class="text-link"
           href="https://github.com/LiberTEM/LiberTEM/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
@@ -127,25 +147,28 @@
           >Google Summer of Code '20 program</a
         >, where I enhanced the data pipeline to allow reshaping pixelated STEM
         datasets and built a feature for handling datasets with sync/acquisition
-        issues. That was my first, proper introduction to open source, which led
-        me to start
+        issues (and continued contributing for more than a year).
+      </p>
+      <p class="text-p">
+        That was my first, proper introduction to open source and real-world
+        software development, and was one of the most transformative experiences
+        I've ever had. When I realised how many smart and motivated students in
+        my college (GEC Palakkad) lacked mentorship and haven’t ever been
+        exposed to what they’re capable of, I started
         <a class="text-link" href="https://openhack.gitbook.io/openhack-20/"
           >FOSS OpenHack '20</a
         >
-        — a program which helped 25+ students with building 10+ open source
-        projects and contributing to 5+ major open source projects (Mission
-        Support System, ownCloud-CERN, CVE Binary Tool, etc).
+        — a program which helped 25+ students build 10+ open source projects and
+        helped 3 students who went on to do a GSoC with MSS, CERN and Intel.
       </p>
       <p class="text-p">
-        Before my GSoC, I tried building things to solve real-world problems and
-        <a
-          class="text-link"
-          href="https://github.com/anandbaburajan/Road-Status-Updates"
-          >failed</a
-        >, but took part in small hackathons and won some. Before that, in my
-        first year of college, I did freelance WordPress development for 5+
-        clients and made Rs 45k+. I got started with WordPress when I helped
-        build my parents' WordPress news sites such as TelecomLead.
+        Before my GSoC, I tried building things to solve real-world problems
+        (movie piracy, finding status of roads during the Kerala floods,
+        accessible mentorship, etc.) and failed, but took part in small
+        hackathons and won some. Before that, in my first year of college, I did
+        freelance WordPress development for 5+ clients and made Rs 45k+. I got
+        started with WordPress when I helped build my parents' WordPress news
+        sites such as TelecomLead.
       </p>
       <p class="text-p">
         I got started with programming in my Class 6th by building simple web
@@ -159,6 +182,10 @@
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
           >videos</a
         >, grew the channel to 2.5k+ subscribers and made Rs 35k+ in ad revenue.
+      </p>
+      <p class="text-p">
+        My current areas of interest are startups, product management,
+        communication platforms, psychology and education.
       </p>
       <br />
       <p>
@@ -190,7 +217,7 @@
         ><br />
       </p>
       <br />
-      <p>
+      <p id="rocket">
         <a href="https://www.youtube.com/watch?v=A0FZIwabctw" target="_blank">
           <svg
             xmlns="http://www.w3.org/2000/svg"
