--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
       </p>
       <p class="text-p">
         I created
-        <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
-        poll tool to help people find a time which works for everyone. It has
-        been used to create over 2.5k+ polls, has 280+ stars on GitHub and won a
-        Rs 10k prize at
+        <a class="text-link" href="https://samay.app/">Samay</a> — a free and
+        open source meeting poll tool to help people find a time which works for
+        everyone. It has been used to create over 2.5k+ polls, has 280+ stars on
+        GitHub and won a Rs 10k prize at
         <a
           class="text-link"
           href="https://forum.fossunited.org/t/foss-hack-3-0-results/1882#:~:text=Kukkee,meeting%20poll%20tool."
