--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
         I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — the
-        free and open source tool for complex discussions.
+        best tool for complex discussions. It's free and open source.
       </p>
       <p class="text-p">
         Before CQ2, I worked at Frappe, where I primarily
