--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
-        I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — the
-        best tool for complex discussions. It's free and open source.
+        I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — a
+        document discussion tool, designed for thoughtfulness and coherence.
       </p>
       <p class="text-p">
         Before CQ2, I worked at Frappe, where I primarily
@@ -114,7 +114,7 @@
         I created
         <a class="text-link" href="https://samay.app/">Samay</a> — a free and
         open source meeting poll tool to help people find a time which works for
-        everyone. It has been used to create over 2.5k+ polls, has 280+ stars on
+        everyone. It has been used to create 2.5k+ polls, has 280+ stars on
         GitHub and won a Rs 10k prize at
         <a
           class="text-link"
