--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         document discussion tool, designed for thoughtfulness and coherence.
       </p>
       <p class="text-p">
-        Before CQ2, I worked at Frappe, where I primarily
+        Before starting CQ2, I worked as a Product Engineer at Frappe, where I
+        primarily
         <a
           class="text-link"
           href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
@@ -124,11 +125,11 @@
         by FOSS United.
       </p>
       <p class="text-p">
-        I
+        I was a SWE
         <a
           class="text-link"
           href="https://www.hackerrank.com/interns/2021/summer/"
-          >interned</a
+          >intern</a
         >
         at HackerRank, where I built the HackerRank Interviews for Slack
         integration and a bunch of features for HackerRank for Work.
