--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
         I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — a
-        document discussion tool, designed for thoughtfulness and coherence.
+        document collaboration tool, designed for thoughtfulness and coherence.
       </p>
       <p class="text-p">
-        Before starting CQ2, I worked as a Product Engineer at Frappe, where I
-        primarily
+        Before CQ2, I worked as a Product Engineer at Frappe, where I primarily
         <a
           class="text-link"
           href="https://github.com/frappe/erpnext/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
