--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
         I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — a
-        document collaboration tool, designed for thoughtfulness and coherence.
+        document discussion tool, designed for thoughtfulness and coherence.
       </p>
       <p class="text-p">
         Before CQ2, I worked as a Product Engineer at Frappe, where I primarily
