--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
       <br />
       <p class="text-p">Hi, I'm Anand.</p>
       <p class="text-p">
-        I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — a
-        document discussion tool, designed for thoughtfulness and coherence.
+        I'm building <a class="text-link" href="https://cq2.co/">CQ2</a> — an
+        open-source, self-hostable tool for RFCs, designed for thoughtfulness
+        and coherence.
       </p>
       <p class="text-p">
         Before CQ2, I worked as a Product Engineer at Frappe, where I primarily
