--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
         >, got 20k views, 235 early access sign-ups and 300+ GitHub stars, but
-        didn't take off unfortunately due to organizational inertia.
+        didn't take off unfortunately.
       </p>
       <p class="text-p">
         Before starting CQ2, I worked as a Product Engineer at Frappe, where I
