--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Anand Baburajan" />
     <meta
       name="description"
-      content="Welcome to Anand's space on the internet!"
+      content="Hi, I'm Anand. I built CQ2 and Samay. Previously, I was a product engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, product management, communication platforms, psychology and education."
     />
     <style>
       @font-face {
