--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           href="https://github.com/LiberTEM/LiberTEM/pulls?q=is%3Apr+author%3Aanandbaburajan+is%3Aclosed"
           >contributed</a
         >
-        to LiberTEM through the
+        to LiberTEM (under the Python Software Foundation) through the
         <a
           class="text-link"
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
