--- a/index.html
+++ b/index.html
@@ -100,14 +100,13 @@
       <p class="text-p">
         I built <a class="text-link" href="https://cq2.co/">CQ2</a> — a tool for
         RFCs, designed for thoughtfulness and coherence. It's 10x better than
-        existing tools used for RFCs such as Google Docs, GitHub PRs, Discourse,
+        existing tools for RFCs such as Google Docs, GitHub PRs, Discourse,
         email threads, etc. It hit #2 on
         <a
           class="text-link"
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
-        >, got 20k impressions, 235 early access sign-ups and 300+ GitHub stars,
-        but hasn't taken off unfortunately, yet.
+        >, got 20k impressions, 235 early access sign-ups and 300+ GitHub stars.
       </p>
       <p class="text-p">
         Before starting CQ2, I worked as a Product Engineer at Frappe, where I
@@ -193,8 +192,8 @@
         revenue.
       </p>
       <p class="text-p">
-        My current areas of interest are startups, product management,
-        communication platforms, psychology and education.
+        My current areas of interest are startups, product, communication
+        platforms, ritual social apps, psychology and education.
       </p>
       <br />
       <p>
