--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Anand Baburajan" />
     <meta
       name="description"
-      content="Hi, I'm Anand. I built CQ2, Wordamour and Samay. Previously, I was a product engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, product management, communication platforms, psychology and education."
+      content="Hi, I'm Anand. I'm a Growth Engineer at Ente. I built CQ2, Wordamour and Samay. Previously, I was a Product Engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, growth, product, communication platforms, ritual social apps, psychology and education."
     />
     <style>
       @font-face {
@@ -110,7 +110,6 @@
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
         >, got 20k impressions, 235 early access sign-ups and 300+ GitHub stars.
-        Currently in talks with open source communities about their RFC process.
       </p>
       <p class="text-p">
         I built
@@ -196,7 +195,7 @@
         for GizmoLead, which achieved 2.7K+ subscribers and 1M+ total views.
       </p>
       <p class="text-p">
-        My current areas of interest are startups, product, communication
+        My current areas of interest are startups, growth, product, communication
         platforms, ritual social apps, psychology and education.
       </p>
       <br />
