--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
           >videos</a
         >
-        for GizmoLead, which achieved 2.7K+ subscribers and 1M+ total views.
+        for GizmoLead, which got 2.7K+ subscribers and 1M+ total views.
       </p>
       <p class="text-p">
         My current areas of interest are startups, growth, product, communication
