--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         I built
         <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
         poll tool to help people find a time which works for everyone. It has
-        been used to create 2.5k+ polls, has 300+ GitHub stars and won a prize
+        been used to create 2.5k+ polls, got 300+ GitHub stars and won a prize
         at FOSS Hack 3.0.
       </p>
       <p class="text-p">
