--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
           class="text-link"
           href="https://news.ycombinator.com/item?id=40277547"
           >Hacker News</a
-        >, got 20k impressions, 235 early access sign-ups and 300+ GitHub stars.
+        >, got 20k impressions, 235 early access sign-ups (Wave, PostHog, Deno,
+        Pylon Lending, etc) and 300+ GitHub stars.
       </p>
       <p class="text-p">
         I built
