--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         for GizmoLead, which got 2.7K+ subscribers and 1M+ total views.
       </p>
       <p class="text-p">
-        My current areas of interest are startups, growth, product,
-        communication platforms, ritual social apps, psychology and education.
+        My current areas of interest are startups, growth, product, movies,
+        ritual social apps and psychology.
       </p>
       <br />
       <p>
