--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         I built
         <a class="text-link" href="https://wordamour.com/">Wordamour</a> — a
         personalised word search puzzle for your special someone. It has helped
-        many people earn brownie points with their spouses and has received 10
+        many people earn brownie points with their spouses and received 10
         coffees on Buy Me a Coffee.
       </p>
       <p class="text-p">
