--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
       </p>
       <p class="text-p">
         I built
-        <a class="text-link" href="https://samay.app/">Samay</a> — a meeting
-        poll tool to help people find a time which works for everyone. It has
-        been used to create 2.5k+ polls and got 300+ GitHub stars.
+        <a class="text-link" href="https://samay.app/">Samay</a> — a group
+        scheduling tool to help people find a time which works for everyone. It
+        has been used to create 2.5k+ polls and got 300+ GitHub stars.
       </p>
       <p class="text-p">
         I was one of the SWE interns in HackerRank's
