--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
         helped 3 students who went on to do a GSoC with MSS, CERN and Intel.
       </p>
       <p class="text-p">
-        I used to help develop and maintain my parents' WordPress news sites
-        such as TelecomLead, and also did some freelance WordPress development
-        for 5+ clients.
+        I helped develop and maintain my parents' WordPress news sites such as
+        TelecomLead, and also did some freelance WordPress development for 5+
+        clients.
       </p>
       <p class="text-p">
-        I used to write about tech news, did tech reviews, attended tech press
+        I wrote about tech news, did tech reviews, attended tech press
         conferences and produced tech
         <a class="text-link" href="https://www.youtube.com/watch?v=c4VpwEXKako"
           >videos</a
