--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Anand Baburajan" />
     <meta
       name="description"
-      content="Hi, I'm Anand. I'm a Growth Engineer at Ente. I built CQ2, Wordamour and Samay. Previously, I was a Product Engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, growth, product, communication platforms, ritual social apps, psychology and education."
+      content="Hi, I'm Anand. I work on marketing and growth initiatives at Ente. I'm also the creator of CQ2, Wordamour and Samay. Previously, I was a Product Engineer at Frappe, a SWE intern at HackerRank and a GSoC student at LiberTEM. My current areas of interest are startups, football, movies, ritual social apps and psychology."
     />
     <style>
       @font-face {
