--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         ><br />
         <a
           class="text-link"
-          href="mailto:anandbaburajan@gmail.com"
+          href="mailto:hi@anandbaburajan.com"
           target="_blank"
         >
           Email </a
@@ -199,9 +199,6 @@
           href="https://www.linkedin.com/in/anandbaburajan/"
           target="_blank"
           >LinkedIn </a
-        ><br />
-        <a class="text-link" href="https://t.me/anandbaburajan" target="_blank">
-          Telegram </a
         ><br />
       </p>
       <br />
